// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Search Default 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
  testID="search"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "backgroundColor": "#FFFFFF",
          "flexDirection": "row",
        },
        Object {
          "height": 67,
        },
      ]
    }
    testID="search-header"
  >
    <View
      style={
        Object {
          "justifyContent": "center",
          "width": 44,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 24,
            },
            false,
            false,
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 16,
              "left": 16,
              "right": 16,
              "top": 16,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="search-back-icon"
        >
          <View>
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={20}
              bbWidth={20}
              color={4283723386}
              focusable={false}
              height={20}
              id="prefix__Calque_1"
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  Object {
                    "flex": 0,
                    "height": 20,
                    "width": 20,
                  },
                ]
              }
              tintColor={4283723386}
              vbHeight={20}
              vbWidth={20}
              width={20}
              x={0}
              xmlSpace="preserve"
              y={0}
            >
              <RNSVGGroup>
                <RNSVGGroup
                  name="prefix__Page-1"
                >
                  <RNSVGPath
                    d="M13.9 0l2.9 3-6.9 7 6.9 7-2.9 3L4 10z"
                    fill={4283723386}
                    name="prefix__arrow_left"
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                  />
                </RNSVGGroup>
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "padding": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#ECEFF1",
            "borderRadius": 24,
            "flex": 1,
            "flexDirection": "row",
            "height": 40,
            "paddingHorizontal": 16,
            "paddingVertical": 8,
            "width": "100%",
          }
        }
      >
        <View>
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={16}
            bbWidth={16}
            color={4287669422}
            focusable={false}
            height={16}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "flex": 0,
                  "height": 16,
                  "width": 16,
                },
              ]
            }
            tintColor={4287669422}
            vbHeight={13}
            vbWidth={13}
            width={16}
          >
            <RNSVGGroup>
              <RNSVGPath
                d="M12.414 11L9.167 7.753C9.691 6.963 10 6.018 10 5c0-2.757-2.243-5-5-5S0 2.243 0 5s2.243 5 5 5a4.964 4.964 0 002.753-.833L11 12.414 12.414 11zM2 5c0-1.654 1.346-3 3-3s3 1.346 3 3-1.346 3-3 3-3-1.346-3-3z"
                fill={4287669422}
                fillRule={1}
                propList={
                  Array [
                    "fill",
                    "fillRule",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <View
          style={
            Object {
              "height": 8,
              "width": 8,
            }
          }
        />
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          autoFocus={true}
          onChangeText={[Function]}
          placeholder="Search"
          placeholderTextColor="#90A4AE"
          rejectResponderTermination={true}
          style={
            Object {
              "color": "#14171A",
              "flex": 1,
              "fontSize": 17,
            }
          }
          testID="search-input-field"
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "flexGrow": 1,
      }
    }
    testID="catalog-search"
  />
</View>
`;

exports[`Storyshots Search Searching 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
  testID="search"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "backgroundColor": "#FFFFFF",
          "flexDirection": "row",
        },
        Object {
          "height": 67,
        },
      ]
    }
    testID="search-header"
  >
    <View
      style={
        Object {
          "justifyContent": "center",
          "width": 44,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 24,
            },
            false,
            false,
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 16,
              "left": 16,
              "right": 16,
              "top": 16,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="search-back-icon"
        >
          <View>
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={20}
              bbWidth={20}
              color={4283723386}
              focusable={false}
              height={20}
              id="prefix__Calque_1"
              meetOrSlice={0}
              minX={0}
              minY={0}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  Object {
                    "flex": 0,
                    "height": 20,
                    "width": 20,
                  },
                ]
              }
              tintColor={4283723386}
              vbHeight={20}
              vbWidth={20}
              width={20}
              x={0}
              xmlSpace="preserve"
              y={0}
            >
              <RNSVGGroup>
                <RNSVGGroup
                  name="prefix__Page-1"
                >
                  <RNSVGPath
                    d="M13.9 0l2.9 3-6.9 7 6.9 7-2.9 3L4 10z"
                    fill={4283723386}
                    name="prefix__arrow_left"
                    propList={
                      Array [
                        "fill",
                      ]
                    }
                  />
                </RNSVGGroup>
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "padding": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#ECEFF1",
            "borderRadius": 24,
            "flex": 1,
            "flexDirection": "row",
            "height": 40,
            "paddingHorizontal": 16,
            "paddingVertical": 8,
            "width": "100%",
          }
        }
      >
        <View>
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={16}
            bbWidth={16}
            color={4287669422}
            focusable={false}
            height={16}
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "flex": 0,
                  "height": 16,
                  "width": 16,
                },
              ]
            }
            tintColor={4287669422}
            vbHeight={13}
            vbWidth={13}
            width={16}
          >
            <RNSVGGroup>
              <RNSVGPath
                d="M12.414 11L9.167 7.753C9.691 6.963 10 6.018 10 5c0-2.757-2.243-5-5-5S0 2.243 0 5s2.243 5 5 5a4.964 4.964 0 002.753-.833L11 12.414 12.414 11zM2 5c0-1.654 1.346-3 3-3s3 1.346 3 3-1.346 3-3 3-3-1.346-3-3z"
                fill={4287669422}
                fillRule={1}
                propList={
                  Array [
                    "fill",
                    "fillRule",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
        <View
          style={
            Object {
              "height": 8,
              "width": 8,
            }
          }
        />
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          autoFocus={true}
          onChangeText={[Function]}
          placeholder="Search"
          placeholderTextColor="#90A4AE"
          rejectResponderTermination={true}
          style={
            Object {
              "color": "#14171A",
              "flex": 1,
              "fontSize": 17,
            }
          }
          testID="search-input-field"
          underlineColorAndroid="transparent"
          value="data viz"
        />
        <View
          style={
            Object {
              "height": 8,
              "width": 8,
            }
          }
        />
        <ActivityIndicator
          animating={true}
          color="#14171A"
          hidesWhenStopped={true}
          size="small"
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "flexGrow": 1,
      }
    }
    testID="catalog-search"
  />
</View>
`;
